# ChessProject

./: CMakeLists.txt  README.md  gitAddress.txt  main.cpp
include/: chessboard.h  chesspiece.h  gamemanagement.h
include/chessDerivedPieces/: bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
include/logic/: chessboard.h  chesspiece.h  coordinate.h  gamemanagement.h  networkmanager.h  player.h
src/: chessboard.cpp  chesspiece.cpp  coordinate.cpp  gamemanagement.cpp  main.cpp  main.cpp.autosave
src/chessDerivedPieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/logic/: chessboard.cpp  chesspiece.cpp  coordinate.cpp  gamemanagement.cpp  networkmanager.cpp  networkmanager.cpp.autosave
